<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StitcherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/splice_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/splice_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="vertical"
                android:textSize="14sp" />
            <RadioButton
                android:id="@+id/splice_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="horizontal"
                android:textSize="14sp" />


        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:id="@+id/l_t_hint"
                        android:text="@string/cut_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/cut_l_t"
                        android:text="125"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        />
                </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/r_b_hint"
                    android:text="@string/cut_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:text="125"
                    android:id="@+id/cut_r_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/com_size_hint"
                android:text="@string/com_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:text="70"
                android:id="@+id/com_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </LinearLayout>
        <Button
            android:id="@+id/select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="Select image"
            android:onClick="selectImage"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/splicing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:onClick="startStitcher"
            android:text="Splicing"
            android:textSize="14sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>